			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

VERSION 5.5.9 (March 02, 2005)
==============================

  * FIXED: Bug#12: poor error reporting on illegal module export list.
    Remy Haemmerle.

  * ADDED: Enh#21: hide details of library debug from the tracer.
    Holger Kanwischer.

  * FIXED: compiler error causing crashes on some weird variable patterns.
    With fix from Sergey Tikhonov.  Thanks!

  * ADDED: allow defining behaviour of streams when writing characters
    that cannot be represented.  Suggested by Anjo Anjewierden.

  * FIXED: getting character code value for characters with code > 255.
    Anjo Anjewierden.


VERSION 5.5.8 (Februari 25, 2005)
=================================

  * FIXED: negative random numbers on MS-Windows.  Upgraded random/1 to
    return 64-bit random numbers.  Jocelyn Paine.

  * FIXED: typo in message context.

  * FIXED: Seek issues for wchar and unicode streams.

  * MODIFIED: changed encoding 'none' to 'octet'.  Streams opened as
    type 'binary' now by default use the 'octet' encoding.  Adjusted
    and documented sgml-parser interaction with Prolog stream encoding.

  * ADDED: More library(ordsets) primitives to support library clp(R).

  * FIXED: Allow for errornous parse_url('http://2004.bloggies.com/', X).
    Anjo Anjewierden.


VERSION 5.5.7 (Februari 21, 2005)
=================================

  * ADDED: wide-character support for '$apropos_match'/2.

  * FIXED: Serious error in saved states dealing with multifile predicates
    and modules.  Jocelyn Paine.

  * FIXED: Possible deadlock in set_prolog_flag/2.

  * ADDED: Various new predicates to the ordsets compatibility library,
    used for the new CHR version.
   
  * ENHANCED: Provide better error context.  Suggested by Paulo Moura.